syntax = "proto3";

package miningpool.middleware.fractionwithdrawal.v1;

option go_package = "github.com/NpoolPlatform/kunman/message/miningpool/middleware/v1/fractionwithdrawal";

import "basetypes/v1/conds.proto";
import "basetypes/miningpool/v1/enums.proto";

message FractionWithdrawalReq {
  optional uint32 ID = 10;
  optional string EntID = 20;
  optional string AppID = 30;
  optional string UserID = 40;
  optional string OrderUserID = 50;
  optional string CoinTypeID = 51;
  optional basetypes.miningpool.v1.FractionWithdrawState FractionWithdrawState =
      60;
  optional uint32 WithdrawAt = 70;
  optional uint32 PromisePayAt = 80;
  optional string Msg = 90;
}

message FractionWithdrawal {
  // @inject_tag: sql:"id"
  uint32 ID = 10;
  // @inject_tag: sql:"ent_id"
  string EntID = 20;
  // @inject_tag: sql:"app_id"
  string AppID = 30;
  // @inject_tag: sql:"user_id"
  string UserID = 40;
  // @inject_tag: sql:"order_user_id"
  string OrderUserID = 50;
  // @inject_tag: sql:"coin_type_id"
  string CoinTypeID = 51;
  // @inject_tag: sql:"fraction_withdraw_state"
  string FractionWithdrawStateStr = 60;
  basetypes.miningpool.v1.FractionWithdrawState FractionWithdrawState = 61;
  // @inject_tag: sql:"withdraw_at"
  uint32 WithdrawAt = 70;
  // @inject_tag: sql:"promise_pay_at"
  uint32 PromisePayAt = 80;
  // @inject_tag: sql:"msg"
  string Msg = 90;
  // @inject_tag: sql:"created_at"
  uint32 CreatedAt = 100;
  // @inject_tag: sql:"updated_at"
  uint32 UpdatedAt = 110;
}

message Conds {
  optional basetypes.v1.Uint32Val ID = 9;
  optional basetypes.v1.StringVal EntID = 10;
  optional basetypes.v1.StringVal AppID = 20;
  optional basetypes.v1.StringVal UserID = 30;
  optional basetypes.v1.StringVal OrderUserID = 40;
  optional basetypes.v1.StringVal CoinTypeID = 41;
  optional basetypes.v1.Uint32Val FractionWithdrawState = 50;
  optional basetypes.v1.StringSliceVal EntIDs = 60;
}

